--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/history_arcade.jpg">
     </div>
   </section>
+  <h1>FAVORITES</h1>
     <div id="Games">
-        <h1>FAVORITES</h1>
         <img
             src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/kof97.png">
         <img
@@ -93,11 +93,12 @@
     </div>
 
     <div id="Companies">
-        <h1>COMPANIES</h1>
+       <!-- <h1>COMPANIES</h1> -->
 
         <div class="card first">
             <div class="card-header">
                 <h3>KONAMI</h3>
+        
                 <img
                     src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/joystick.png">
             </div>
@@ -217,14 +218,14 @@
 
     </div>
 
-    <div id="footer">
-       <!-- <p>Luis Miguel Rosario Suarez | LMRS</p>
-        <p>Content: Pixabay|Flaticon|Freepik|Unsplash</p>-->
-      <!-- <a href="#"><img
+    <footer id="footer">
+    <p>Luis Miguel Rosario Suarez | LMRS</p>
+        <p>Content: Pixabay|Flaticon|Freepik|Unsplash</p>
+  <a href="#"><img
                 src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/telegram.png"></a>
         <a href="#"><img
                 src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/discord.png"></a>
---> 
-    </div>
+ 
+        </footer>
 </body>
 </html>
