--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     </div>
     <h1>HISTORY</h1>
     <section class="History_">
+        <img
+        src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/history_arcade.jpg">
     <div id="History">
         <div class="container">
             <p>Galaxy Game, programmed by Bill Pitts and Hugh Tuck, is the first commercial game on record. It was
@@ -78,8 +80,6 @@
 
 
         </div>
-        <img
-        src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/history_arcade.jpg">
     </div>
   </section>
   <h1>FAVORITES</h1>
@@ -219,13 +219,26 @@
     </div>
 
     <footer id="footer">
-    <p>Luis Miguel Rosario Suarez | LMRS</p>
-        <p>Content: Pixabay|Flaticon|Freepik|Unsplash</p>
-  <a href="#"><img
-                src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/telegram.png"></a>
-        <a href="#"><img
-                src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/discord.png"></a>
- 
+        <div class="social_red">
+            <span style="font-size: 48px;">
+         <i class="fab fa-facebook-square"></i> 
+          </span>
+          <span style="font-size: 48px;">
+         <i class="fab fa-discord"></i>
+        </span>
+        <span style="font-size: 48px;">
+         <i class="fab fa-twitter-square"></i>
+        </span>
+       </div>
+       <div class="Links">
+       
+        <li><a><i class="fas fa-angle-right"></i> Companies</a></li>
+         <li><a><i class="fas fa-angle-right"></i> History</a></li>
+         <li><a><i class="fas fa-angle-right"></i> Information</a></li>
+       
+       </div>
+        <p>Luis Miguel Rosario Suarez | LMRS
+            Content: Pixabay|Flaticon|Freepik|Unsplash</p>
         </footer>
 </body>
 </html>
