--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" type="image/x-icon"  href="https://gitlab.com/nelcido_diaz/media/-/raw/master/imagenes/favicon_arcade.ico">
+    <link rel="shortcut icon" type="image/x-icon"  href="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492935/favicon_arcade_sfze21.png">
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/361675330a.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
     </div>
         <div class="Banner">
             <video
-                src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/video_banner.mp4"
+                src="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492935/favicon_arcade_sfze21.png"
                 autoplay loop muted>    </video>
               <div class="Banner_Text">
               <h2>Arcadia Web</h2>
@@ -60,7 +60,7 @@
     <h1>HISTORY</h1>
     <section class="History_">
         <img
-        src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/history_arcade.jpg">
+        src="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492944/history_arcade_tfy3o4.jpg">
     <div id="History">
         <div class="container">
             <p>Galaxy Game, programmed by Bill Pitts and Hugh Tuck, is the first commercial game on record. It was
@@ -85,11 +85,11 @@
   <h1>FAVORITES</h1>
     <div id="Games">
         <img
-            src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/kof97.png">
+            src="https://res.cloudinary.com/dbchwsjig/image/upload/v1596493005/kof97_txrf07.png">
         <img
-            src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/sf2.png">
+            src="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492994/sf2_njxo9v.png">
         <img
-            src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/metal_slug.png">
+            src="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492996/metal_slug_d5qrrr.png">
     </div>
 
     <div id="Companies">
@@ -100,7 +100,7 @@
                 <h3>KONAMI</h3>
         
                 <img
-                    src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/joystick.png">
+                    src="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492927/joystick_tlhttb.png">
             </div>
 
             <div class="card-body">
@@ -119,7 +119,7 @@
             <div class="card-header">
                 <h3>CAPCOM</h3>
                 <img
-                    src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/joystick.png">
+                    src="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492927/joystick_tlhttb.png">
             </div>
 
             <div class="card-body">
@@ -138,7 +138,7 @@
             <div class="card-header">
                 <h3 class="h3-corto">SNK</h3>
                 <img
-                    src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/joystick.png">
+                    src="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492927/joystick_tlhttb.png">
             </div>
 
             <div class="card-body">
