--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
         <div class="Banner">
             <video
-                src="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492935/favicon_arcade_sfze21.png"
+                src="https://res.cloudinary.com/dbchwsjig/video/upload/v1596493070/video_banner_imnspk.mp4"
                 autoplay loop muted>    </video>
               <div class="Banner_Text">
               <h2>Arcadia Web</h2>
