No se que poner aqui XD

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <!-- <h2>Original font: "Xataka"</h2>--> 
         </div>
         <img
-        src="https://gitlab.com/nelcido_diaz/media/-/raw/bdb96b22a9625f097b4901acbc883411049dde23/imagenes/info_arcade.jpg">
+        src="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492934/info_arcade_e2zvsn.jpg">
     </div>
     <h1>HISTORY</h1>
     <section class="History_">
