--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             <div class="parrafo">
                 <h2>Arcadia Web</h2>
             </div>
-
-                <li><a href="#Banner">Home</a></li>
-                <li><a href="#Info">Info</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">Companies</a></li>
+                <div class="El_Nuevo">
+                <li><a href="#Banner"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href="#Info"><i class="fas fa-info"></i>Info</a></li>
+                <li><a href="#"><i class="fas fa-landmark"></i>History</a></li>
+                <li><a href="#"><i class="fas fa-building"></i>Companies</a></li>
+            </div>
         </nav>
     </div>
         <div class="Banner">
