--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <h2>Arcadia Web</h2>
             </div>
                 <div class="El_Nuevo">
-                <li><a href="#Banner"><i class="fas fa-home"></i>Home</a></li>
-                <li><a href="#Info"><i class="fas fa-info"></i>Info</a></li>
-                <li><a href="#"><i class="fas fa-landmark"></i>History</a></li>
-                <li><a href="#"><i class="fas fa-building"></i>Companies</a></li>
+                <li><a href="#Banner"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="#Info"><i class="fas fa-info"></i> Info</a></li>
+                <li><a href="#"><i class="fas fa-landmark"></i> History</a></li>
+                <li><a href="#"><i class="fas fa-building"></i> Companies</a></li>
             </div>
         </nav>
     </div>
@@ -156,7 +156,7 @@
     </div>
 
     <div id="Blog">
-        <p class="titulo">position the mouse on the image to read</p>
+        <p class="titulo"></p>
         <div id="Marketing">
             <div class="texto">
                 <p>Digital marketing is the component of marketing that utilizes internet and online based digital
