--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="shortcut icon" type="image/x-icon"  href="https://res.cloudinary.com/dbchwsjig/image/upload/v1596492935/favicon_arcade_sfze21.png">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://res.cloudinary.com/dbchwsjig/raw/upload/v1596564534/Styles/index_zjyoo7.css">
     <script src="https://kit.fontawesome.com/361675330a.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
@@ -30,8 +30,8 @@
                 autoplay loop muted>    </video>
               <div class="Banner_Text">
               <h2>Arcadia Web</h2>
-             <p>Una nueva version de la pagina </p>
-              <button id="boton">Me Gusta</button>
+             <p>A new version</p>
+              <button id="boton">I like it</button>
             </div>
         </div>
         <h1>INFORMATION</h1>
@@ -153,7 +153,7 @@
         </div>
 
     </div>
-
+    <h1>Put the mouse over</h1>
     <div id="Blog">
         <p class="titulo"></p>
         <div id="Marketing">
